# course_work_django

./: Readme.md  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blogpost_confirm_delete.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html
config/: celery.py  settings.py  urls.py
mailing/: admin.py  apps.py  forms.py  models.py  services.py  tasks.py  urls.py  views.py
mailing/management/commands/: fill_db.py
mailing/migrations/: 0001_initial.py
mailing/templates/mailing/: base.html  client_confirm_delete.html  client_detail.html  client_list.html  home.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  mailing_log_list.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html
mailing/templates/mailing/includes/: inc_mailing_menu.html
mailing/templates/main/: index.html
mailing/templatetags/: media_filter.py
static/css/: scrollbars.css  styles.css
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  register.html  user_edit.html  users_list.html  verification_email.html  verify_email.html
